postgresql/adminer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: common
spec:
  selector:
    matchLabels:
      app: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: postgresql
        image: postgres:17.4
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
