postgresql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: common
spec:
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: my-postgres-longhorn-volume
          mountPath: /var/lib/ghost/content
      volumes:
      - name: my-postgres-longhorn-volume
        persistentVolumeClaim:
          claimName: postgres-longhorn-pvc
