postgresql/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: common
spec:
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-volume
          mountPath: /var/lib/ghost/content
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      volumes:
      - name: postgresql-volume
        persistentVolumeClaim:
          claimName: postgresql
