postgresql/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: common
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: adminer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: adminer
  ports:
    - port: 8080
      targetPort: 8080
