postgresql/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: common
  labels:
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: postgresql
