postgresql/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: common
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql
